namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juiceshop
---
apiVersion: v1
kind: Namespace
metadata:
  name: testhost
