dtesthost.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testhost 
spec:
  containers:
  - name: waf-k8s-testhost 
#  image: localhost:32000/testhost:current
    image: vmummer/cpwaftesthost:current
  #    imagePullPolicy: Never  
    imagePullPolicy: IfNotPresent
#
    command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
    volumeMounts:
      - mountPath: /home/cp
        name: cp-files

  volumes:
  - name: cp-files
    hostPath:
      path: /home/lab/cp-waf-k8s/cp 
      type: Directory
