testhost.yaml
# 25-09 - Added passing default hosts to container
apiVersion: v1
kind: Pod
metadata:
  name: testhost 
  namespace: testhost
spec:
  containers:
  - name: waf-k8s-testhost 
    #    image: vmummer/cpwaftesthost:latest.rfhardened
    image: vmummer/cpwafciser:latest-rfhardened
    imagePullPolicy: Always
#
    command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
