wafciser.yaml
# 25-09 - Added passing default hosts to container
apiVersion: v1
kind: Pod
metadata:
  name: wafciser 
  namespace: wafciser
spec:
  containers:
  - name: cp-wapciser 
    #    image: vmummer/cpwaftesthost:latest.rfhardened
    image: vmummer/cpwafciser:25-09-30
    imagePullPolicy: Always
#
    command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
