ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juiceshopnginx 
  namespace: webapps 
  annotations:

spec:
 ingressClassName: nginx
 rules:
  - host: juiceshop.lab
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: juiceshop
           port: 
             number: 3000

  - host: vampi.lab
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: vampi 
           port: 
             number: 5000
